[package]
name = "reading-list"
version = "0.1.0"
authors = ["Tomas Longo <longo.tomas@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rusqlite = "0.24.2"
structopt = "0.3.13"
dialoguer = "0.7.1"
