[package]
name = "reading-list"
version = "0.1.0"
authors = ["Tomas Longo <longo.tomas@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24.2"
structopt = "0.3.13"
dialoguer = "0.7.1"
tui = "0.14"
termion = "1.5"
comfy-table = "1.5.0"
